# sub2api

./: .gitignore  Dockerfile  HANDOFF.md  cla.json
.github/workflows/: backend-ci.yml  eyami-deploy.yml  eyami-image.yml  release.yml  security-scan.yml
backend/cmd/server/: wire_gen.go
backend/internal/config/: config.go
backend/internal/handler/: deposit_handler.go  deposit_handler_test.go  handler.go  openai_gateway_handler.go  wire.go
backend/internal/server/routes/: user.go
backend/internal/service/: account_test_service.go  account_usage_service.go  openai_agent_identity.go  openai_agent_identity_compat_test.go  openai_gateway_service.go  openai_quota_service.go  openai_quota_spark_window_test.go  wire.go
deploy/: .env.example  Dockerfile  config.example.yaml  docker-compose.yml
docs/: SOLANA_DEPOSIT_CN.md
frontend/: index.html  package.json  pnpm-lock.yaml  pnpm-workspace.yaml
frontend/src/api/: auth.ts  payment.ts
frontend/src/branding/: eyami.ts
frontend/src/branding/__tests__/: eyami.spec.ts
frontend/src/components/icons/: Icon.vue
frontend/src/stores/: app.ts
solana-deposit/: .gitignore  Anchor.toml  README.md  package.json  pnpm-lock.yaml  pnpm-workspace.yaml
solana-deposit/programs/solana-deposit/: Cargo.toml  Xargo.toml
solana-deposit/programs/solana-deposit/src/: lib.rs
solana-deposit/scripts/: initialize.js  withdraw.js
solana-deposit/tests/: solana-deposit.ts
solana-watcher/: Cargo.toml  Dockerfile
solana-watcher/src/: config.rs  credit.rs  events.rs  listener.rs  main.rs  pricing.rs  store.rs
(+21 files in other folders)
