[package]
name = "solana-watcher"
version = "0.1.0"
edition = "2021"
description = "Watches a Solana Anchor program for DepositEvent logs and credits sub2api user balances"
license = "MIT"
publish = false

[dependencies]
anyhow = "1"
base64 = "0.22"
hex = "0.4"
reqwest = { version = "0.12", default-features = false, features = ["json", "rustls-tls"] }
rusqlite = { version = "0.32", features = ["bundled"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
sha2 = "0.10"
tokio = { version = "1", features = ["macros", "rt-multi-thread", "sync", "time"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
