[package]
name = "solana-deposit"
version = "0.1.0"
description = "On-chain deposit program for sub2api balance top-up (SOL / USDC)"
edition = "2021"

[lib]
crate-type = ["cdylib", "lib"]
name = "solana_deposit"

[features]
no-entrypoint = []
no-idl = []
no-log-ix-name = []
cpi = ["no-entrypoint"]
default = []
idl-build = ["anchor-lang/idl-build", "anchor-spl/idl-build"]

[dependencies]
anchor-lang = { version = "0.31.1", features = ["init-if-needed"] }
anchor-spl = "0.31.1"
